--- a/charts/dataplane/values.yaml
+++ b/charts/dataplane/values.yaml
@@ -7,7 +7,7 @@ util:
   image:
     repository: nephelaiio/dataplane-util
     pullPolicy: IfNotPresent
-    tag: dataplane-0.1.20
+    tag: dataplane-0.1.21
   resources: {}
 
 cdc:
@@ -19,7 +19,6 @@ cdc:
   #  postgres:
   #    - hostname: "network.hostname"
   #      port: 5432
-  #      id: "dbId"
   #      dbname: "sourcedb"
   #      signaling: "signaling_table"
   #      partitions:
@@ -29,9 +28,8 @@ cdc:
 
 strimzi:
   kafka:
-    version: "3.4.0"
-    replicas: 1
-    brokers: 1
+    version: "3.7.0"
+    brokers: 3
     annotations: {}
     config: {}
     listener:
@@ -52,7 +50,7 @@ strimzi:
       tag: dataplane-0.1.20
     replicas: 1
     config:
-      group.id: connect-cluster
+      consumer.groupId: connect-cluster
       offset.storage.topic: connect.cluster.offsets
       config.storage.topic: connect.cluster.configs
       status.storage.topic: connect.cluster.status
@@ -62,8 +60,8 @@ strimzi:
     annotations:
       strimzi.io/use-connector-resources: "true"
 
-  zookeeper:
-    replicas: 1
+  kraft:
+    replicas: 3
     storage:
       size: 10Gi
       class: ""
